--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -20,7 +20,7 @@ select_parts:
   unknown: '???'
 parts_list:
   pagination_label: Part page navigation
-  search_label: Flag
+  search_label: Flag Search
   show_whole_label: Replace all parts
   filter_label: Filter Flags
 sprite:
@@ -37,7 +37,12 @@ flag_info:
       No Info.
   source_label: '[Source]'
   pagination_label: Flag List page navigation
-  search_label: Flag
+  search_label: Flag Search
+color_palette:
+  label: Color Palette
+  search_label: Color Search
+  pagination_label: Color Palette page navigation
+  delete_label: Delete Color
 orientation:
   horizontal: Horizontal
   vertical: Vertical
