--- a/_data/flags_info.yml
+++ b/_data/flags_info.yml
@@ -400,7 +400,7 @@
     abinary non-binary people who are attracted to women, women-aligned people, feminine
     aligned people, and other non-binary people who identify as lesbians.</p>
   id: lipstick_lesbian
-  img: https://static.wikia.nocookie.net/lgbta/images/a/ae/Lesbianflag.png/revision/latest/scale-to-width-down/1000
+  img: https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Lipstick_Lesbian_flag_without_lips.svg/1024px-Lipstick_Lesbian_flag_without_lips.svg.png
   link: https://lgbta.wikia.org/wiki/Lesbian
   name: Lipstick Lesbian
 - description: <p>Man, also known as Male, Guy, or Boy (diminutive) is a gender which
