--- a/scripts/sub_culture_flags.yaml
+++ b/scripts/sub_culture_flags.yaml
@@ -8,7 +8,7 @@
     - '#a85c8e'
     - '#951f60'
   link: https://lgbta.wikia.org/wiki/Lesbian
-  img: https://static.wikia.nocookie.net/lgbta/images/a/ae/Lesbianflag.png/revision/latest/scale-to-width-down/1000
+  img: https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Lipstick_Lesbian_flag_without_lips.svg/1024px-Lipstick_Lesbian_flag_without_lips.svg.png
 - name: Butch Lesbian
   colors:
     - '#364071'
